--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "start": "live-server --port=8000 --open=build --ignore=build"
   },
   "dependencies": {
-    "react": "15.5.4",
-    "react-dom": "15.5.4",
     "jquery": "3.2.1",
     "lodash": "^4.17.4",
-    "semantic-ui": "2.2.10"
+    "react": "15.5.4",
+    "react-dom": "15.5.4",
+    "semantic-ui-react": "^0.68.4"
   },
   "devDependencies": {
     "webpack": "2.4.1",
