--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "start": "live-server --port=8000 --open=build --ignore=build"
   },
   "dependencies": {
+    "css-loader": "^0.28.3",
     "jquery": "3.2.1",
     "lodash": "^4.17.4",
     "react": "15.5.4",
     "react-dom": "15.5.4",
-    "semantic-ui-react": "^0.68.4"
+    "semantic-ui-react": "^0.68.4",
+    "style-loader": "^0.18.1"
   },
   "devDependencies": {
     "webpack": "2.4.1",
