--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "15.5.4",
     "semantic-ui-react": "^0.68.4",
     "css-loader": "^0.28.3",
-    "style-loader": "^0.18.1"
+    "style-loader": "^0.18.1",
+    "moment": "^2.18.1"
   },
   "devDependencies": {
     "babel-core": "6.24.1",
