--- a/package.json
+++ b/package.json
@@ -1,40 +1,41 @@
 {
-  "name": "calendar",
-  "version": "1.0.0",
-  "main": "app.js",
-  "scripts": {
-    "init": "npm install live-server -g",
-    "build": "webpack",
-    "watch": "webpack -w",
-    "start": "live-server --port=8000 --open=build --ignore=build",
-    "dev": "npm run watch && npm run start",
-	"test": "jest"
-  },
-  "dependencies": {
-    "jquery": "3.2.1",
-    "lodash": "^4.17.4",
-    "react": "15.5.4",
-    "react-dom": "15.5.4",
-    "semantic-ui-react": "^0.68.4",
-    "moment": "^2.18.1"
-  },
-  "devDependencies": {
-    "babel-core": "6.24.1",
-    "babel-jest": "^20.0.3",
-    "babel-loader": "7.0.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.3",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "jest": "^20.0.4",
-    "node-sass": "^4.5.3",
-    "path": "0.12.7",
-    "react-test-renderer": "^15.6.1",
-    "sass-loader": "^6.0.5",
-    "style-loader": "^0.18.1",
-    "uglifyjs-webpack-plugin": "^0.4.3",
-    "webpack": "2.4.1",
-    "webpack-dev-server": "^1.16.2"
-  }
+	"name": "calendar",
+	"version": "1.0.0",
+	"main": "app.js",
+	"scripts": {
+		"init": "npm install live-server -g",
+		"build": "webpack",
+		"watch": "webpack -w",
+		"start": "live-server --port=8000 --open=build --ignore=build",
+		"dev": "npm run watch && npm run start",
+		"test": "jest"
+	},
+	"dependencies": {
+		"jquery": "3.2.1",
+		"lodash": "^4.17.4",
+		"react": "15.5.4",
+		"react-dom": "15.5.4",
+		"semantic-ui-react": "^0.68.4",
+		"moment": "^2.18.1",
+		"store.js": "^1.0.4"
+	},
+	"devDependencies": {
+		"babel-core": "6.24.1",
+		"babel-jest": "^20.0.3",
+		"babel-loader": "7.0.0",
+		"babel-preset-es2015": "^6.24.1",
+		"babel-preset-react": "^6.24.1",
+		"copy-webpack-plugin": "^4.0.1",
+		"css-loader": "^0.28.3",
+		"extract-text-webpack-plugin": "^2.1.0",
+		"jest": "^20.0.4",
+		"node-sass": "^4.5.3",
+		"path": "0.12.7",
+		"react-test-renderer": "^15.6.1",
+		"sass-loader": "^6.0.5",
+		"style-loader": "^0.18.1",
+		"uglifyjs-webpack-plugin": "^0.4.3",
+		"webpack": "2.4.1",
+		"webpack-dev-server": "^1.16.2"
+	}
 }
